feat: add rename document version
