# DocFlow.API/App/DTOs/RequestsDTO.cs
@@ -7,4 +7,5 @@
 	public record ChangeDocumentGeneralInfoDTO(string Name, int? CategoryId, bool IsPrivate);
 	public record DocumentCreateDTO(string Name, int? CategoryId, bool IsPrivate);
 	public record DocumentAddVersionDTO(string Name);
+	public record DocumentVersionUpdateGeneralInfoDTO(string Name);
 }
